# tuiwright

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.agents/: README.md
.agents/skills/tuiwright-debug/: SKILL.md
.agents/skills/tuiwright-run/: SKILL.md
.agents/skills/tuiwright-test/: SKILL.md
.claude/: README.md
.github/workflows/: ci.yml  docs.yml
docs/: api.md  hello-tui.md  index.md  install.md  quickstart.md  recording.md
docs/concepts/: architecture.md  screens.md  sessions.md  waiting.md
docs/guides/: ai-agents.md  ci.md  debugging.md  writing-tests.md
docs/input/: keys.md  mouse.md  paste.md  resize-focus.md
docs/pytest/: cli.md  fixtures.md  marker.md
docs/snapshots/: cell-grid.md  png.md
examples/gode/: README.md  conftest.py  test_gode_basic.py
src/tuiwright/: __init__.py  __main__.py  _emulator.py  _input.py  _pty.py  cli.py  pytest_plugin.py  screen.py  session.py
src/tuiwright/_record/: __init__.py  bridge.py  codegen.py  decoders.py
src/tuiwright/_snapshot/: __init__.py  cells.py  png.py
src/tuiwright/_trace/: __init__.py  recorder.py
tests/: conftest.py  test_bridge.py  test_codegen.py  test_decoders.py  test_emulator.py  test_input.py  test_screen.py  test_session_basic.py  test_session_mouse.py  test_session_paste_focus.py  test_snapshots.py
tests/__snapshots__/test_snapshots/: test_screen_after_typing.screen  test_screen_snapshot_round_trip.screen
tests/fixtures/: demo_app.py
